--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
       - name: Install Requirements
         run: pip install -r requirements.txt
+      - name: Install package
+        run: make install
       - name: Run Tests
         run: make test
