--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        python-version: [3.6.1]
+        python-version: [3.8.10]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -22,6 +22,6 @@ jobs:
       - name: Install Requirements
         run: pip install -r requirements.txt
       - name: Install package
-        run: make install
+        run: sudo make install
       - name: Run Tests
         run: make test
